# QtTask

./: .gitignore  CMakeLists.txt  README.md  imageprocessor.cpp  imageprocessor.cpp.autosave  imageprocessor.h
app_setup/data_base/: sample_image (1).json  sample_image (2).json  sample_image (3).json  sample_image (5).json  sample_image (7).json  sample_image.json
src/: CMakeLists.txt
src/image_meta_data_viewer/: CMakeLists.txt  ImageMetaDataViewer.cpp  ImageProcessor.cpp  main.cpp  main.qml
src/image_meta_data_viewer/include/: ImageMetaDataViewer.h  ImageProcessor.h
test/: CMakeLists.txt  test_ImageMetaDataViewer.cpp  test_ImageMetaDataViewer.h.in  test_ImageProcessor.cpp
